fix: wrap badges

--- a/src/containers/token/badges/badges.scss
+++ b/src/containers/token/badges/badges.scss
@@ -29,6 +29,7 @@
   &-cards {
     display: flex;
     display: -webkit-flex;
+    flex-wrap: wrap;
     margin: 0 -15px;
   }
 }
